[package]
name = "rtsp-to-webrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive", "env"] }
dashmap = "6.1.0"
retina = "0.4.15"
rustyline = "17.0.2"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
webrtc = "0.14.0"
